terraform/securitygroup.tf
resource "aws_security_group" "allow-ssh" {
  vpc_id      = "vpc-052b847bedf4e2930"
  name        = "allow-ssh"
  description = "security group that allows ssh and all egress traffic"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow-ssh"
  }
}
resource "aws_security_group" "allow-nodeports" {
  vpc_id      = "vpc-052b847bedf4e2930"
  name        = "allow-nodeports"
  description = "security group that allows nodeports and all egress traffic"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 30000
    to_port     = 32767
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow-nodeports"
  }
}
